syntax = "proto3";

package domain;
option go_package = "marketplace-services/pkg/domain";

message RemovedUserEvent {
    string address = 1;
}