syntax = "proto3";

package domain;
option go_package = "marketplace-services/pkg/domain";

message UpdatedUserEvent {
    string address = 1;
}